examples/multipleFiles/something.cpp
#include "something.h"
void something(int) // error: wrong return type
{
}